:link: Updating assignment description URLs to web archives

--- a/1-Fundamentals/2019-11-08-Introduction-Part-One.ipynb
+++ b/1-Fundamentals/2019-11-08-Introduction-Part-One.ipynb
@@ -773,7 +773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Python can interpolate variables inside strings. This process is called formatting and uses the `str.format()` function. The positions of the variables in the string are given by curly braces: `{}` that will be replaced by the arguments in `format()` in the same order as in:"
+    "_Python can interpolate variables inside strings. This process is called formatting and uses the `str.format()` function. The positions of the variables in the string are given by curly braces: `{}` that will be replaced by the arguments in `format()` in the same order as in:_"
    ]
   },
   {
@@ -2053,7 +2053,7 @@
    "source": [
     "_By default, `sorted()` sorts the elements alphabetically. If we want to sort the letters by frequency, we can use the key argument of `sorted()`. key specifies a function whose result is used to compare the elements. In our case, we want to compare the frequencies, that is the values of the dictionary. We saw that we extract these values with the `get` method, here `letter_count.get`, and we hence assign it to key._\n",
     "\n",
-    "_Using `get`, the letters will be sorted from the least frequent to the most frequent. If we want to reverse this order, we use the third argument, `reverse`, a Boolean value, that we set to `True`."
+    "_Using `get`, the letters will be sorted from the least frequent to the most frequent. If we want to reverse this order, we use the third argument, `reverse`, a Boolean value, that we set to `True`._"
    ]
   },
   {
@@ -3126,7 +3126,7 @@
     "\n",
     "_Decorators need a generic memo function to cache the results already computed._\n",
     "\n",
-    "-Let us define it:-"
+    "_Let us define it:_"
    ]
   },
   {
@@ -3175,7 +3175,7 @@
     "```\n",
     "fibonacci = memo_function(fibonacci)\n",
     "```\n",
-    "we just decorate `fibonacci()` with the `@memo_function` line before it:\n",
+    "_we just decorate `fibonacci()` with the `@memo_function` line before it:_\n",
     "```\n",
     "@memo_function\n",
     "def fibonacci(n):\n",
@@ -3649,7 +3649,7 @@
     "```\n",
     "lambda x, y: x[1] + y[1]\n",
     "```\n",
-    "to sum the consecutive elements, where the length of each file is the second element in the pair; the first one being the text.\n",
+    "_to sum the consecutive elements, where the length of each file is the second element in the pair; the first one being the text._\n",
     "\n",
     "_`reduce()` is part of the functools module and we have to import it. The resulting code is:_\n",
     "```\n",
@@ -3715,7 +3715,7 @@
    "metadata": {},
    "source": [
     "## Credits\n",
-    "This assignment was prepared by P. Nugues et al., HT2019 (link [here](http://cs.lth.se/edan95/lab-programming-assignments/lab-session-6)).\n",
+    "This assignment was prepared by P. Nugues et al., HT2019 (link [here](https://web.archive.org/web/20200111075034/http://cs.lth.se/edan95/lab-programming-assignments/lab-session-1/)).\n",
     "\n",
     "Exercises and code are from Ch 1. A Tour of Python in _Language Processing with Python_ (P. Nugues, 2019)."
    ]
@@ -3737,7 +3737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
