--- a/1-Fundamentals/2019-11-08-Introduction-Part-Three.ipynb
+++ b/1-Fundamentals/2019-11-08-Introduction-Part-Three.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "source": [
     "### Creating Arrays\n",
-    "Now let's import `numpy`. Most people assign it the alias `np`:"
+    "_Now let's import `numpy`. Most people assign it the alias `np`:_"
    ]
   },
   {
@@ -2662,8 +2662,7 @@
    "metadata": {},
    "source": [
     "#### Boolean indexing\n",
-    "You can also provide an `ndarray` of boolean values on one axis to specify the indices that you want to access.\n",
-    "In [97]:\n"
+    "_You can also provide an `ndarray` of boolean values on one axis to specify the indices that you want to access._\n"
    ]
   },
   {
@@ -3089,7 +3088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+This was possible because `q1`, `q2` and `q3` all have the same shape (except for the vertical axis, but that's ok since we are stacking on that axis)._\n",
+    "_This was possible because `q1`, `q2` and `q3` all have the same shape (except for the vertical axis, but that's ok since we are stacking on that axis)._\n",
     "\n",
     "\n",
     "#### `hstack`\n",
@@ -4967,7 +4966,7 @@
    "metadata": {},
    "source": [
     "## Credits\n",
-    "This assignment was prepared by P. Nugues et al., HT2019 (link [here](http://cs.lth.se/edan95/lab-programming-assignments/lab-session-6)).\n",
+    "This assignment was prepared by P. Nugues et al., HT2019 (link [here](https://web.archive.org/web/20200111075034/http://cs.lth.se/edan95/lab-programming-assignments/lab-session-1/)).\n",
     "\n",
     "Exercises and code are from the `tools_numpy.ipynb` notebook in _Machine Learning and Deep Learning in Python using Scikit-learn, Keras and TensorFlow 2_ (A. Géron), available here: https://github.com/ageron/handson-ml2."
    ]
@@ -4989,7 +4988,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
