--- a/2-Decision-Trees/2019-11-15-Decision-Trees.ipynb
+++ b/2-Decision-Trees/2019-11-15-Decision-Trees.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "# Decision Trees with the ID3 Algorithm\n",
     "#### By Jonathan L. Moran (jo6155mo-s@student.lu.se)\n",
-    "###### Prepared by E.A. Topp et al., HT2019 (link [here](http://cs.lth.se/edan95/lab-programming-assignments/lab-session-2/)).\n",
     "From the EDAN95 - Applied Machine Learning course given at Lunds Tekniska Högskola (LTH) | Ht2 2019."
    ]
   },
@@ -361,7 +360,7 @@
     }
    ],
    "source": [
-    "# Visualising the tree using graphviz\n",
+    "# Installing tree visualisation library\n",
     "!pip install graphviz"
    ]
   },
@@ -490,7 +489,6 @@
     "    \"\"\"\n",
     "    Display a sample of randomly selected images and their predicted labels\n",
     "    \"\"\"\n",
-    "    #images_and_predictions = list(zip(images, labels))\n",
     "    number_of_classes = len(np.unique(labels))\n",
     "    for cls in range(number_of_classes):\n",
     "        idxs = np.where(labels == cls)[0]\n",
@@ -1045,7 +1043,7 @@
     "import joblib\n",
     "# Save the GridSearchCV object\n",
     "joblib.dump(grid, 'grid_search_cv.pkl')\n",
-    "#load model if already trained\n",
+    "# Load model if already trained\n",
     "#joblib.load(\"model_file_name.pkl\")"
    ]
   },
@@ -1140,21 +1138,18 @@
     "        grid: trained GridSearchCV object\n",
     "        interactive: boolean indicating whether or not to use Plotly \n",
     "    \"\"\"\n",
-    "\n",
     "    # GridSearchCV results\n",
     "    results = grid.cv_results_\n",
     "    means_test = results['mean_test_score']\n",
     "    stds_test = results['std_test_score']\n",
     "    means_train = results['mean_train_score']\n",
     "    stds_train = results['std_train_score']\n",
-    "\n",
     "    # Hyperparameter value indicies\n",
     "    masks = []\n",
     "    mask_names = list(grid.best_params_.keys())\n",
     "    for p_k, p_v in grid.best_params_.items():\n",
     "        masks.append(list(results['param_'+p_k].data==p_v))\n",
     "    params = grid.param_grid\n",
-    "    \n",
     "    if interactive is True:\n",
     "        # Plot results with Plotly\n",
     "        fig = make_subplots(rows=1, cols=len(params), subplot_titles=mask_names, shared_xaxes=False, shared_yaxes=True)\n",
@@ -1560,23 +1555,18 @@
     "\n",
     "\n",
     "    def __init__(self, minSamplesLeaf = 1, minSamplesSplit = 2):\n",
-    "\n",
     "        self.__nodeCounter = 0\n",
-    "\n",
     "        # the graph to visualise the tree\n",
     "        self.__dot = Digraph(comment='The Decision Tree')\n",
-    "\n",
     "        # suggested attributes of the classifier to handle training parameters\n",
     "        self.__minSamplesLeaf = minSamplesLeaf\n",
     "        self.__minSamplesSplit = minSamplesSplit\n",
-    "\n",
     "\n",
     "    # Create a new node in the tree with the suggested attributes for the visualisation.\n",
     "    # It can later be added to the graph with the respective function\n",
     "    def new_ID3_node(self):\n",
     "        node = {'id': self.__nodeCounter, 'label': None, 'attribute': None, 'entropy': None, 'samples': None,\n",
     "                         'classCounts': None, 'nodes': None}\n",
-    "\n",
     "        self.__nodeCounter += 1\n",
     "        return node\n",
     "\n",
@@ -1593,37 +1583,27 @@
     "            nodeString += \"\\n\" + str(parentid) + \" -> \" + str(node['id'])\n",
     "\n",
     "        print(nodeString)\n",
-    "\n",
     "        return\n",
-    "\n",
     "\n",
     "    # make the visualisation available\n",
     "    def make_dot_data(self):\n",
     "        return self.__dot\n",
     "\n",
-    "\n",
     "    # For you to fill in; Suggested function to find the best attribute to split with, given the set of\n",
     "    # remaining attributes, the currently evaluated data and target.\n",
     "    def find_split_attr(self):\n",
-    "\n",
     "        # Change this to make some more sense\n",
     "        return None\n",
     "\n",
-    "\n",
     "    # the entry point for the recursive ID3-algorithm, you need to fill in the calls to your recursive implementation\n",
     "    def fit(self, data, target, attributes, classes):\n",
-    "\n",
     "        # fill in something more sensible here... root should become the output of the recursive tree creation\n",
     "        root = self.new_ID3_node()\n",
     "        self.add_node_to_graph(root)\n",
-    "\n",
     "        return root\n",
-    "\n",
-    "\n",
     "\n",
     "    def predict(self, data, tree):\n",
     "        predicted = list()\n",
-    "\n",
     "        # fill in something more sensible here... root should become the output of the recursive tree creation\n",
     "        return predicted"
    ]
@@ -1790,7 +1770,7 @@
     "    # Remove extension from filename\n",
     "    img_name = path.with_suffix('')\n",
     "    pages = convert_from_path(path, dpi=300)\n",
-    "    \n",
+    "    # Render each page as an image\n",
     "    for idx,page in enumerate(pages):\n",
     "        img_path = Path(str(img_name) + '_page' + str(idx)).with_suffix('.jpg')\n",
     "        page.save(img_path, 'JPEG')\n",
@@ -1832,14 +1812,14 @@
    "source": [
     "from collections import OrderedDict\n",
     "\n",
-    "class ToyData:\n",
     "\n",
+    "class ToyData:\n",
     "    def __init__(self):\n",
     "        self.attributes = OrderedDict(\n",
     "            [(\"color\", [\"y\", \"g\", \"b\"]), (\"size\", [\"s\", \"l\"]), (\"shape\", [\"r\", \"i\"])]\n",
     "        )\n",
     "        self.classes = ('+', '-')\n",
-    "\n",
+    "        # Training set data (attribute values)\n",
     "        self.data = [('y', 's', 'r'),\n",
     "                 ('y', 's', 'r'),\n",
     "                 ('g', 's', 'i'),\n",
@@ -1856,14 +1836,15 @@
     "                 ('y', 'l', 'r'),\n",
     "                 ('y', 's', 'i'),\n",
     "                 ('y', 'l', 'i')]\n",
+    "        # Training set labels\n",
     "        self.target = ('+', '-', '+', '-', '+', '+', '+', '+', '-', '-', '+', '-', '-', '-', '+', '+')\n",
-    "\n",
+    "        # Test set data (attribute values)\n",
     "        self.testData = [('y', 's', 'r'),\n",
     "                 ('y', 's', 'r'),\n",
     "                 ('g', 's', 'i'),\n",
     "                 ('b', 'l', 'i'),\n",
     "                 ('y', 'l', 'r')]\n",
-    "\n",
+    "        # Test set labels\n",
     "        self.testTarget = ('+', '-', '+', '-', '+')\n",
     "\n",
     "    def get_data(self):\n",
@@ -1904,19 +1885,13 @@
     }
    ],
    "source": [
-    "#import ToyData as td\n",
-    "#import ID3\n",
-    "\n",
     "import numpy as np\n",
     "from sklearn import tree, metrics, datasets\n",
     "\n",
     "\n",
     "def main():\n",
-    "\n",
     "    attributes, classes, data, target, data2, target2 = ToyData().get_data()\n",
-    "\n",
     "    id3_test = ID3DecisionTreeClassifierSkeleton()\n",
-    "\n",
     "    myTree = id3_test.fit(data, target, attributes, classes)\n",
     "    print(myTree)\n",
     "    plot = id3_test.make_dot_data()\n",
@@ -2006,7 +1981,6 @@
     "        # The node object implemented with a dictionary \n",
     "        node = {'id': self.__nodeCounter, 'label': None, 'attribute': None, 'entropy': None, 'samples': None,\n",
     "                         'classCounts': None, 'nodes': None}\n",
-    "\n",
     "        # New key to store parent node's attribute value\n",
     "        node.update({'attribute_value': None})\n",
     "        # Incremement the counter by one for every new node created\n",
@@ -2026,7 +2000,6 @@
     "        if (parentid != -1):\n",
     "            self.__dot.edge(str(parentid), str(node['id']))\n",
     "            nodeString += \"\\n\" + str(parentid) + \" -> \" + str(node['id'])\n",
-    "        \n",
     "        if self.__verbose:\n",
     "            print(nodeString)\n",
     "        return\n",
@@ -2093,7 +2066,6 @@
     "        \"\"\"\n",
     "        info_gains = self._calc_information_gain(target, attributes, node)\n",
     "        best_split = max(info_gains, key=lambda x: info_gains[x])\n",
-    "\n",
     "        self._best_split = best_split\n",
     "        return self._best_split\n",
     "\n",
@@ -2108,17 +2080,14 @@
     "        \"\"\"\n",
     "        # Count the frequencies of each class in target\n",
     "        classCounts = Counter(target.values())\n",
-    "        \n",
     "        # Create new node and update its values\n",
     "        node = self.new_ID3_node()\n",
     "        node.update({'samples': len(data)})\n",
     "        node.update({'classCounts': classCounts})\n",
     "        node.update({'entropy': self._calc_entropy(node)})\n",
     "        node.update({'attribute_value': attr_val})\n",
-    "\n",
     "        # Create an empty list to store child nodes\n",
     "        children = []\n",
-    "        \n",
     "        # Stopping condition: no remaining attributes to split on\n",
     "        if not attributes:\n",
     "            # Update label of leaf node to be the name of the most frequent class\n",
@@ -2142,7 +2111,6 @@
     "            # Add the node into the graph for visualisation\n",
     "            self.add_node_to_graph(node, parentid)\n",
     "            best_attribute_dict = attributes[best_attribute]\n",
-    "\n",
     "            # Recursively build branches by computing the best remaining attributes to split on\n",
     "            for attribute_value, attribute_value_idxs in best_attribute_dict.items():\n",
     "                # Remove the split attribute\n",
@@ -2152,7 +2120,6 @@
     "                data_partitioned = {idx:data[idx] for idx in attribute_value_idxs if idx in data.keys()}\n",
     "                # Get the class labels from target that map to the attribute value pairs\n",
     "                target_partitioned = {idx:target[idx] for idx in attribute_value_idxs if idx in target.keys()}\n",
-    "                \n",
     "                # If there are remaining attribute values to split\n",
     "                if data_partitioned:\n",
     "                    # Call recursive function to find the next best attribute(s) to split on\n",
@@ -2180,7 +2147,6 @@
     "        \"\"\"\n",
     "        # Toggle printing of dot-nodes during training\n",
     "        self.__verbose = verbose\n",
-    "\n",
     "        # Format the Scikit-learn digits dataset\n",
     "        if dataset is not \"ToyData\":\n",
     "            # Assume attributes is a list with the unique values of all attributes in data\n",
@@ -2192,12 +2158,10 @@
     "            data = [tuple(x) for x in data]\n",
     "            # Convert the target labels into a tuple\n",
     "            target = tuple(target)\n",
-    "\n",
     "        # Index the input data\n",
     "        data_indexed = {i:data[i] for i in range(len(data))}\n",
     "        target_indexed = {i:target[i] for i in range(len(target))}\n",
-    "        attributes_indexed = {attr:i for i, attr in enumerate(attributes.keys())}\n",
-    "        \n",
+    "        attributes_indexed = {attr:i for i, attr in enumerate(attributes.keys())}    \n",
     "        # Build nested attribute dict where each attribute value is paired with the indices in data where it occurs\n",
     "        for i, attribute in enumerate(attributes.keys()):\n",
     "            # Get the list of attribute values\n",
@@ -2212,10 +2176,8 @@
     "                attribute_value_idx[x[i]].append(idx)\n",
     "            # Save the attribute's value-indicies mapping\n",
     "            attributes[attribute] = attribute_value_idx\n",
-    "\n",
     "        # Build the decision tree using the ID3-algorithm and return its root node\n",
     "        root = self.build_tree(data_indexed, target_indexed, attributes, classes)\n",
-    "        \n",
     "        self._attributes_indexed = attributes_indexed\n",
     "        self._root = root\n",
     "        return self._root\n",
@@ -2246,14 +2208,12 @@
     "        Predicts the class labels of the test set sample-by-sample by traversing the decision tree built during training.\n",
     "        \"\"\"\n",
     "        predicted = list()\n",
-    "\n",
     "        # Format the dataset\n",
     "        if dataset is not \"ToyData\":\n",
     "            data = [tuple(x) for x in data]\n",
     "        for x in data:\n",
     "            # Append the predicted label of x to the list\n",
     "            predicted.append(self._predict(x, tree)) \n",
-    "        \n",
     "        self.y_pred = predicted\n",
     "        return self.y_pred"
    ]
@@ -3210,7 +3170,7 @@
    },
    "source": [
     "## Credits\n",
-    "This assignment was prepared by the EDAN95 HT2019 teaching staff at Lunds Tekniska Högskola (LTH). The skeleton code for the ID3-algorithm and ToyData dataset was authored by E.A. Topp (bio [here](https://cs.lth.se/topp-elinanna/)).\n",
+    "This assignment was prepared by E.A. Topp et al., HT2019 (link [here](https://web.archive.org/web/20200111075039/http://cs.lth.se/edan95/lab-programming-assignments/lab-session-2/)).\n",
     "\n",
     "Most of the code in this notebook was inspired by A. Sears-Collins' [Iterative Dichotomiser 3 Algorithm in Python](https://automaticaddison.com/iterative-dichotomiser-3-id3-algorithm-from-scratch/).\n",
     "\n",
@@ -3244,7 +3204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
