--- a/3-CNNs/2019-11-22-Convolutional-Neural-Networks.ipynb
+++ b/3-CNNs/2019-11-22-Convolutional-Neural-Networks.ipynb
@@ -14,15 +14,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "cxe3oR-UbJ2F"
-   },
-   "source": [
-    "In this post, we'll introduce to you the Convolutional Neural Network and its application to image classification."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "8bG9gR3UbJ2G"
    },
    "source": [
@@ -64,6 +55,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Splitting the dataset\n",
+    "# Credit: https://github.com/pnugues/edan95/blob/master/labs/3.0-flowers_cnn_students.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "colab": {
@@ -85,8 +86,6 @@
     }
    ],
    "source": [
-    "### Splitting the dataset\n",
-    "# import flowers_create_dataset\n",
     "\"\"\"\n",
     "Categorising the flower dataset\n",
     "Creating the dataset\n",
@@ -99,10 +98,8 @@
     "\n",
     "# The machine name (False if Colab)\n",
     "vilde = False\n",
-    "\n",
     "# To create the same dataset\n",
     "random.seed(0)\n",
-    "\n",
     "# Here write the path to your dataset\n",
     "if vilde:\n",
     "    base = '/home/jonathanmoran/'\n",
@@ -110,45 +107,36 @@
     "    base = 'src/'\n",
     "original_dataset_dir = os.path.join(base, 'flowers_original')\n",
     "dataset = os.path.join(base, 'flowers_split')\n",
-    "\n",
     "train_dir = os.path.join(dataset, 'train')\n",
     "validation_dir = os.path.join(dataset, 'validation')\n",
     "test_dir = os.path.join(dataset, 'test')\n",
-    "\n",
     "categories = os.listdir(original_dataset_dir)\n",
     "categories = [category for category in categories if not category.startswith('.')]\n",
     "print('Image types:', categories)\n",
     "data_folders = [os.path.join(original_dataset_dir, category) for category in categories]\n",
-    "\n",
     "pairs = []\n",
     "for folder, category in zip(data_folders, categories):\n",
     "    images = os.listdir(folder)\n",
     "    images = [image for image in images if not image.startswith('.')]\n",
     "    pairs.extend([(image, category) for image in images])\n",
-    "\n",
     "random.shuffle(pairs)\n",
     "img_nbr = len(pairs)\n",
     "train_images = pairs[0:int(0.6 * img_nbr)]\n",
     "val_images = pairs[int(0.6 * img_nbr):int(0.8 * img_nbr)]\n",
     "test_images = pairs[int(0.8 * img_nbr):]\n",
-    "\n",
-    "# print(train_images)\n",
     "print(len(train_images))\n",
     "print(len(val_images))\n",
     "print(len(test_images))\n",
-    "\n",
     "for image, label in train_images:\n",
     "    src = os.path.join(original_dataset_dir, label, image)\n",
     "    dst = os.path.join(train_dir, label, image)\n",
     "    os.makedirs(os.path.dirname(dst), exist_ok=True)\n",
     "    shutil.copyfile(src, dst)\n",
-    "\n",
     "for image, label in val_images:\n",
     "    src = os.path.join(original_dataset_dir, label, image)\n",
     "    dst = os.path.join(validation_dir, label, image)\n",
     "    os.makedirs(os.path.dirname(dst), exist_ok=True)\n",
     "    shutil.copyfile(src, dst)\n",
-    "\n",
     "for image, label in test_images:\n",
     "    src = os.path.join(original_dataset_dir, label, image)\n",
     "    dst = os.path.join(test_dir, label, image)\n",
@@ -292,7 +280,6 @@
     "    # All images will be rescaled by 1./255\n",
     "    train_datagen = ImageDataGenerator(rescale=1./255)\n",
     "    test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "    \n",
     "    train_generator = train_datagen.flow_from_directory(\n",
     "        # This is the target directory\n",
     "        train_dir,\n",
@@ -301,7 +288,6 @@
     "        batch_size=batch_size,\n",
     "        # Since we use categorical_crossentropy loss, we need categorical labels\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    validation_generator = test_datagen.flow_from_directory(\n",
     "        validation_dir,\n",
     "        target_size=target_size,\n",
@@ -444,10 +430,9 @@
    "source": [
     "unique, counts = np.unique(train_generator.classes, return_counts=True)\n",
     "vals = OrderedDict(zip(unique, counts))\n",
-    "\n",
     "class_counts = []\n",
     "for i in range(5):\n",
-    "  class_counts.append(vals[i])"
+    "    class_counts.append(vals[i])"
    ]
   },
   {
@@ -488,6 +473,7 @@
     }
    ],
    "source": [
+    "# Plotting class counts\n",
     "plt.figure()\n",
     "x = np.arange(len(class_counts))\n",
     "plt.bar(x, class_counts)\n",
@@ -530,6 +516,7 @@
     }
    ],
    "source": [
+    "# Plotting class distributions\n",
     "targets = [(counts)]\n",
     "plt.pie(targets, labels=xlabel, explode=[0.05, 0.05, 0.05, 0.05, 0.05], autopct='%1.1f%%')\n",
     "plt.axis('equal')\n",
@@ -567,20 +554,18 @@
     "    val_acc = history.history['val_categorical_accuracy']\n",
     "    loss = history.history['loss']\n",
     "    val_loss = history.history['val_loss']\n",
-    "    \n",
     "    epochs = range(len(acc))\n",
-    "    \n",
+    "    # Plotting accuracy per epoch\n",
     "    plt.plot(epochs, acc, 'bo', label='Training acc')\n",
     "    plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
     "    plt.title('Training and validation accuracy')\n",
     "    plt.legend()\n",
-    "    \n",
+    "    # Plotting loss per epoch\n",
     "    plt.figure()\n",
     "    plt.plot(epochs, loss, 'bo', label='Training loss')\n",
     "    plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
     "    plt.title('Training and validation loss')\n",
     "    plt.legend()\n",
-    "    \n",
     "    plt.show()"
    ]
   },
@@ -645,13 +630,10 @@
     "    model.add(layers.Flatten())\n",
     "    model.add(layers.Dense(512, activation='relu'))\n",
     "    model.add(layers.Dense(len(classes), activation='softmax'))\n",
-    "    \n",
     "    print(model.summary())\n",
-    "\n",
     "    model.compile(loss='categorical_crossentropy', \n",
     "                  optimizer=optimizers.RMSprop(), \n",
     "                  metrics =['categorical_accuracy'])\n",
-    "\n",
     "    return model"
    ]
   },
@@ -753,7 +735,6 @@
     "        epochs=epochs,\n",
     "        validation_data=validation_generator,\n",
     "        validation_steps=np.ceil(validation_generator.samples / validation_generator.batch_size))\n",
-    "\n",
     "    plot_history(history)"
    ]
   },
@@ -902,15 +883,12 @@
     "        batch_size=batch_size,\n",
     "        class_mode='categorical',\n",
     "        shuffle=False)\n",
-    "    \n",
     "    y_prob = model.predict_generator(test_generator, np.ceil(test_generator.samples / test_generator.batch_size))\n",
     "    # Select greatest class probability for each sample in y_prob\n",
     "    y_pred = np.argmax(y_prob, axis=1)\n",
-    "  \n",
     "    print('-'*10 + 'Classification Report' + '-'*5)\n",
     "    print(classification_report(test_generator.classes, y_pred, target_names=classes))\n",
     "    print('-'*10 + 'Confusion Matrix' + '-'*10)\n",
-    "    #print(confusion_matrix(test_generator.classes, y_pred))\n",
     "    plot_confusion_matrix(confusion_matrix(test_generator.classes, y_pred))"
    ]
   },
@@ -1152,21 +1130,15 @@
    "source": [
     "# Selecting the \"daisy\" class images from the training set\n",
     "folder_path = 'src/flowers_split/train/daisy'\n",
-    "\n",
     "file_names = [os.path.join(folder_path, fname) for fname in os.listdir(folder_path)]\n",
-    "\n",
     "# We pick one image to \"augment\"\n",
     "img_path = file_names[50]\n",
-    "\n",
     "# Read the image and resize it\n",
     "img = image.load_img(img_path, target_size=target_size)\n",
-    "\n",
     "# Convert it to a Numpy array with shape (150, 150, 3)\n",
     "x = image.img_to_array(img)\n",
-    "\n",
     "# Reshape it to (1, 150, 150, 3)\n",
     "x = x.reshape((1,) + x.shape)\n",
-    "\n",
     "# The .flow() command below generates batches of randomly transformed images.\n",
     "# It will loop indefinitely, so we need to `break` the loop at some point!\n",
     "i = 0\n",
@@ -1176,7 +1148,6 @@
     "    i += 1\n",
     "    if i % 4 == 0:\n",
     "        break\n",
-    "\n",
     "plt.show()"
    ]
   },
@@ -1224,14 +1195,12 @@
     "    model.add(layers.Dropout(0.2))\n",
     "    model.add(layers.Dense(512, activation='relu'))\n",
     "    model.add(layers.Dense(5, activation='softmax'))\n",
-    "\n",
     "    print(model.summary())\n",
     "    # Setting learning rate manually\n",
     "    model.compile(loss='categorical_crossentropy', \n",
     "                  optimizer=optimizers.RMSprop(learning_rate=1e-5), \n",
     "                  #optimizer=optimizers.Adam(learning_rate=1e-4),\n",
     "                  metrics =['categorical_accuracy'])\n",
-    "\n",
     "    return model"
    ]
   },
@@ -1328,9 +1297,7 @@
     "        zoom_range=0.2,\n",
     "        horizontal_flip=True,\n",
     "        fill_mode='nearest')\n",
-    "    \n",
     "    test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "    \n",
     "    train_generator = train_datagen.flow_from_directory(\n",
     "        # This is the target directory\n",
     "        train_dir,\n",
@@ -1338,21 +1305,18 @@
     "        target_size=target_size,\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    # Note that validation data shouldn't be augmented\n",
     "    validation_generator = test_datagen.flow_from_directory(\n",
     "        validation_dir,\n",
     "        target_size=(150, 150),\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    history = model.fit_generator(\n",
     "        train_generator,\n",
     "        steps_per_epoch=np.ceil(train_generator.samples / train_generator.batch_size),\n",
     "        epochs=epochs,\n",
     "        validation_data=validation_generator,\n",
     "        validation_steps=np.ceil(validation_generator.samples / validation_generator.batch_size))\n",
-    "\n",
     "    print('Total training time (sec):', time.time() - start_time)\n",
     "    plot_history(history)"
    ]
@@ -1647,12 +1611,10 @@
     "        target_size=target_size,\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    y_prob = model.predict_generator(test_generator, \n",
     "                                     np.ceil(test_generator.samples / test_generator.batch_size))\n",
     "    # Select class label with highest probability\n",
     "    y_pred = np.argmax(y_prob, axis=1)\n",
-    "    \n",
     "    print('-'*10 + 'Classification Report' + '-'*5)\n",
     "    print(classification_report(test_generator.classes, y_pred, target_names=classes))\n",
     "    print('-'*10 + 'Confusion Matrix' + '-'*10)\n",
@@ -2585,19 +2547,15 @@
    "source": [
     "def extract_features(directory):\n",
     "    sample_count = count_files(directory, 'jpg')\n",
-    "    \n",
     "    features = np.zeros(shape=(sample_count, *conv_output_shape))\n",
     "    labels = np.zeros(shape=(sample_count, len(classes)))\n",
-    "    \n",
     "    datagen = ImageDataGenerator(rescale=1./255)\n",
-    "    \n",
     "    generator = datagen.flow_from_directory(\n",
     "        directory,\n",
     "        classes=classes,\n",
     "        target_size=train_generator.target_size,\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    i = 0\n",
     "    for inputs_batch, labels_batch in generator:\n",
     "        features_batch = conv_base.predict(inputs_batch)\n",
@@ -2608,9 +2566,7 @@
     "            # Note that since generators yield data indefinitely in a loop,\n",
     "            # we must `break` after every image has been seen once.\n",
     "            break\n",
-    "    \n",
-    "    return features.reshape(-1, np.prod(conv_output_shape)), labels\n",
-    "    #return features, labels"
+    "    return features.reshape(-1, np.prod(conv_output_shape)), labels"
    ]
   },
   {
@@ -2662,13 +2618,10 @@
     "    model.add(layers.Dense(512, activation='relu', input_dim=np.prod(conv_output_shape)))\n",
     "    model.add(layers.Dropout(0.5))\n",
     "    model.add(layers.Dense(len(classes), activation='softmax'))\n",
-    "    \n",
     "    print(model.summary())\n",
-    "    \n",
     "    model.compile(loss='categorical_crossentropy', \n",
     "                  optimizer=optimizers.RMSprop(learning_rate=1.5e-6),\n",
     "                  metrics =['categorical_accuracy'])\n",
-    "    \n",
     "    return model"
    ]
   },
@@ -2724,8 +2677,7 @@
     "        epochs=epochs,\n",
     "        batch_size=batch_size,\n",
     "        validation_data=(x_val, y_val)\n",
-    "    )\n",
-    "        \n",
+    "    )  \n",
     "    plot_history(history)"
    ]
   },
@@ -3253,11 +3205,9 @@
     "    #model3.add(layers.Dropout(0.2))\n",
     "    model3.add(layers.Dense(64, activation='relu'))\n",
     "    model3.add(layers.Dense(len(classes), activation='softmax'))\n",
-    "\n",
     "    model3.compile(loss='categorical_crossentropy', \n",
     "                      optimizer=optimizers.RMSprop(learning_rate=1e-4),\n",
     "                      metrics =['categorical_accuracy'])\n",
-    "    \n",
     "    return model3"
    ]
   },
@@ -3281,7 +3231,6 @@
    "outputs": [],
    "source": [
     "def train_model(model, epochs=1):\n",
-    "    \n",
     "    train_datagen = ImageDataGenerator(\n",
     "        rescale=1./255,\n",
     "        rotation_range=40,\n",
@@ -3291,9 +3240,7 @@
     "        zoom_range=0.2,\n",
     "        horizontal_flip=True,\n",
     "        fill_mode='nearest')\n",
-    "    \n",
     "    test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "    \n",
     "    train_generator = train_datagen.flow_from_directory(\n",
     "        # This is the target directory\n",
     "        train_dir,\n",
@@ -3301,7 +3248,6 @@
     "        target_size=target_size,\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    # Note that validation data shouldn't be augmented\n",
     "    validation_generator = test_datagen.flow_from_directory(\n",
     "        validation_dir,\n",
@@ -3309,14 +3255,12 @@
     "        batch_size=batch_size,\n",
     "        class_mode='categorical'\n",
     "    )\n",
-    "\n",
     "    history = model.fit_generator(\n",
     "        train_generator,\n",
     "        steps_per_epoch=np.ceil(train_generator.samples / train_generator.batch_size),\n",
     "        epochs=epochs,\n",
     "        validation_data=validation_generator,\n",
     "        validation_steps=np.ceil(validation_generator.samples / validation_generator.batch_size))\n",
-    "\n",
     "    plot_history(history)"
    ]
   },
@@ -3469,10 +3413,8 @@
     "        target_size=target_size,\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')\n",
-    "    \n",
     "    y_prob = model.predict_generator(test_generator, np.ceil(test_generator.samples / test_generator.batch_size))\n",
     "    y_pred = np.argmax(y_prob, axis=1)\n",
-    "  \n",
     "    print('-'*10 + 'Classification Report' + '-'*5)\n",
     "    print(classification_report(test_generator.classes, y_pred, target_names=classes))\n",
     "    print('-'*10 + 'Confusion Matrix' + '-'*10)\n",
@@ -3681,7 +3623,6 @@
     "        # we do aggressive exponential smoothing of batch norm\n",
     "        # parameters to faster adjust to our new dataset\n",
     "        layer.momentum = 0.9\n",
-    "    \n",
     "# fix deep layers (fine-tuning only last 50 layers)\n",
     "for layer in conv_base.layers[:-50]:\n",
     "    # fix all but batch norm layers, because we neeed to update moving averages for a new dataset!\n",
@@ -4651,7 +4592,6 @@
     "model.compile(loss='categorical_crossentropy', \n",
     "              optimizer=optimizers.RMSprop(learning_rate=1e-5),\n",
     "              metrics =['categorical_accuracy'])\n",
-    "\n",
     "train_model(model, epochs=100)"
    ]
   },
@@ -4777,7 +4717,7 @@
    },
    "source": [
     "## Credits\n",
-    "This assignment was prepared by Pierre Nugues, an professor of Semantic Systems and Language Technology at Lunds Tekniska Högskola (bio [here](https://cs.lth.se/pierre/)).\n",
+    "This assignment was prepared by P. Nugues et al., HT2019 (link [here](https://web.archive.org/web/20200111075049/http://cs.lth.se/edan95/lab-programming-assignments/lab-session-3/)).\n",
     "\n",
     "Most of the inspiration for this notebook came from François Chollet, creator of Keras and author of Deep Learning with Python. His version of this task is found in notebooks [5.2-using-convnets-with-small-datasets.ipynb](https://github.com/fchollet/deep-learning-with-python-notebooks/blob/master/first_edition/5.2-using-convnets-with-small-datasets.ipynb) and [5.3-using-a-pretrained-convnet.ipynb](https://github.com/fchollet/deep-learning-with-python-notebooks/blob/master/first_edition/5.3-using-a-pretrained-convnet.ipynb). Another version can be found on the TensorFlow Guide blog [here](https://www.tensorflow.org/guide/keras/transfer_learning). \n",
     "\n",
@@ -4807,7 +4747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
