--- a/5-NCC-NBC-GNBC/2019-12-06-Comparing-Various-Classifiers.ipynb
+++ b/5-NCC-NBC-GNBC/2019-12-06-Comparing-Various-Classifiers.ipynb
@@ -14,19 +14,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "34cgO9U1JKXD"
-   },
-   "source": [
-    "_In this post we will implement an NCC, a discrete (count-based) NBC, and a Gaussian NBC and run and compare them on different versions of the data set(s) in Section 2:_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "EtITOd1tJKXJ"
    },
    "source": [
-    "## 1. Classifiers"
+    "## 1. Classifiers\n",
+    "_In this section we will implement an NCC, a discrete (count-based) NBC, and a Gaussian NBC and run and compare them on different versions of the data set(s) in Section 2:_"
    ]
   },
   {
@@ -36,7 +28,7 @@
    },
    "source": [
     "### 1.1. SciKitLearn Gaussian Naive Bayes Classifier\n",
-    "Make use of the provided Gaussian NB Classifier (`sklearn.naive_bayes GaussianNB`) for all data sets as a comparison."
+    "_Make use of the provided Gaussian NB Classifier (`sklearn.naive_bayes GaussianNB`) for all data sets as a comparison._"
    ]
   },
   {
@@ -74,7 +66,7 @@
    },
    "source": [
     "### 1.2. Nearest Centroid Classifier\n",
-    "Implement your own Nearest Centroid Classifier (NCC): The NCC `fit` method should simply compute the mean values over the attribute values of the examples for each class. Prediction is then done by finding the `argmin` over the distances from the class centroids for each sample. This classifier should be run on all three variants of data sets, see below."
+    "_Implement your own Nearest Centroid Classifier (NCC): The NCC `fit` method should simply compute the mean values over the attribute values of the examples for each class. Prediction is then done by finding the `argmin` over the distances from the class centroids for each sample. This classifier should be run on all three variants of data sets, see below._"
    ]
   },
   {
@@ -104,14 +96,15 @@
     "        self._centroids = np.zeros(shape=(n_classes, n_features))\n",
     "        # Compute the per-class centroids (means)\n",
     "        for cls in self._classes:\n",
-    "            idxs = np.where(y_train==cls)    # fetch all samples per label (class)\n",
-    "            # compute the mean value of each 16-bit image \n",
+    "            # Fetch all samples with this class label\n",
+    "            idxs = np.where(y_train==cls)\n",
+    "            # Compute the mean value of each 16-bit image \n",
     "            self._centroids[cls] = np.mean(X_train[idxs], axis=0)\n",
     "        return self    \n",
     "    def predict(self, X_test):\n",
     "        preds = np.zeros(shape=(len(X_test), n_classes))\n",
     "        for i, x in enumerate(X_test):\n",
-    "            # compute dist to per-class centers\n",
+    "            # Compute dist to per-class centers\n",
     "            preds[i] = [np.linalg.norm(x - centroid) for centroid in self._centroids]\n",
     "        y_pred = np.argmin(preds, axis=1)\n",
     "        return y_pred"
@@ -156,19 +149,19 @@
     "        likelihoods = {}\n",
     "        pixel_values = np.unique(X_train.flatten())\n",
     "        for cls in self._classes:\n",
-    "            # store class atrribute frequencies\n",
+    "            # Store class atrribute frequencies\n",
     "            cls_pixels = {}\n",
-    "            # get all samples in current class\n",
+    "            # Get all samples in current class\n",
     "            idxs = np.where(y_train == cls)\n",
-    "            # iterate over each image and its coordinates\n",
+    "            # Iterate over each image and its coordinates\n",
     "            for k, (i,j) in enumerate(product(range(n_rows), range(n_cols))):\n",
-    "                # store attribute value counts (number of occurences)\n",
+    "                # Store attribute value counts (number of occurences)\n",
     "                cls_pixel_counts = np.zeros(shape=len(pixel_values))\n",
-    "                # get attribute value at pixel location and count num occurences in current class\n",
+    "                # Get attribute value at pixel location and count num occurences in current class\n",
     "                loc, num_occurences = np.unique(X_train[idxs][:,i,j], return_counts=True)\n",
-    "                # store attribute value class occurences for every pixel location in image\n",
+    "                # Store attribute value class occurences for every pixel location in image\n",
     "                cls_pixel_counts[loc.astype(np.int8)] = num_occurences\n",
-    "                # compute attribute value class frequencies\n",
+    "                # Compute attribute value class frequencies\n",
     "                if data is \"digits\":\n",
     "                    # with Laplace smoothing\n",
     "                    freq = (cls_pixel_counts + 1) / np.sum(cls_pixel_counts + 1)\n",
@@ -237,12 +230,12 @@
     "        means = {}\n",
     "        vars = {}\n",
     "        for cls in self._classes:\n",
-    "            # get all samples in class\n",
+    "            # Get all samples in class\n",
     "            idxs = np.where(y_train == cls)\n",
-    "            # compute class mean\n",
+    "            # Compute class mean\n",
     "            cls_mean = np.mean(X_train[idxs], axis=0)\n",
     "            means.update({cls:cls_mean})\n",
-    "            # compute class variance\n",
+    "            # Compute class variance\n",
     "            cls_var = np.var(X_train[idxs], axis=0)\n",
     "            vars.update({cls:cls_var})\n",
     "        self._means = means\n",
@@ -350,7 +343,6 @@
     "    Display random sample of images per class\n",
     "    \"\"\"\n",
     "    number_of_classes = len(np.unique(labels))\n",
-    "    \n",
     "    for cls in range(number_of_classes):\n",
     "        idxs = np.where(labels == cls)[0]\n",
     "        idxs = np.random.choice(idxs, examples_per_class, replace=False)\n",
@@ -1693,19 +1685,14 @@
     "# ---------------------------------------------------------------- #\n",
     "from PIL import Image\n",
     "import glob\n",
-    "\n",
     "dir = 'src/MNIST_Light/*/*.png'\n",
-    "\n",
     "filelist = sorted(glob.glob(dir))\n",
     "x = np.array([np.array(Image.open(fname)) for fname in filelist])\n",
-    "\n",
     "samples_per_class = 500\n",
     "number_of_classes = 10\n",
-    "\n",
     "y = np.zeros(number_of_classes * samples_per_class, dtype=int)\n",
     "for cls in range(1, number_of_classes):\n",
     "    y[(cls*500):(cls+1)*500] = cls\n",
-    "    \n",
     "train_features, test_features, train_labels, test_labels = train_test_split(x, y, test_size=0.3, random_state=42)\n",
     "train_normalised = train_features.reshape(3500, 400) / 255.0\n",
     "test_normalised = test_features.reshape(1500, 400) / 255.0"
@@ -2178,7 +2165,7 @@
    },
    "source": [
     "## Credits\n",
-    "This assignment was prepared by E.A Topp et al., HT2019 (link [here](http://cs.lth.se/edan95/lab-programming-assignments/lab-session-5))."
+    "This assignment was prepared by E.A Topp et al., HT2019 (link [here](https://web.archive.org/web/20200111075114/http://cs.lth.se/edan95/lab-programming-assignments/lab-session-5/))."
    ]
   }
  ],
@@ -2203,7 +2190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
